# PR-Demo

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
docs/: architecture.md
docs/adr/: 001-auth-library.md  002-graphql-search-api.md
src/application/: fetch_org_pull_requests.py
src/domain/: ports.py  pr.py  pr_age.py  pr_complexity.py
src/infrastructure/: github_client.py  oauth.py  session.py
src/interface/: dependencies.py
src/interface/routers/: auth.py  dashboard.py  pull_requests.py
templates/: base.html  dashboard.html  login.html
tests/: conftest.py
tests/application/: test_fetch_org_pull_requests.py
tests/domain/: test_ports.py  test_pr_age.py  test_pr_complexity.py
tests/infrastructure/: test_auth_routes.py  test_github_client.py  test_prs_api.py  test_session.py
